# Vladoesgrowth

./: .gitignore  pyproject.toml
.streamlit/: .config.toml
ADKStarterKit/: .env_tutorial
ADKStarterKit/newsletter/: agent.py  prompt.py
ADKStarterKit/newsletter/shared_libraries/: types.py
ADKStarterKit/newsletter/sub_agents/consolidate/: agent.py  prompt.py
ADKStarterKit/newsletter/sub_agents/content_creation/: agent.py  prompt.py
ADKStarterKit/newsletter/sub_agents/marketer/: agent.py  prompt.py
ADKStarterKit/newsletter/tools/: places.py  search.py
ADKStarterKit/travel_concierge/: .gitignore  agent.py  prompt.py
ADKStarterKit/travel_concierge/sub_agents/inspiration/: agent.py  prompt.py
AutomatingWebsites/: README.md  Tutorial_chat.ipynb  Tutorial_comment.ipynb  Tutorial_scrape.ipynb  create_session.ipynb
Banana/: api.py  banana.py  banana2.py  models.py  requirements.txt  services.py
Banana/uploads/clothing/: 57c45ff6-9c77-4da4-a154-42b29d0dcd3c.HEIC  abf420f3-c745-4998-85b0-d266472c9ad4.HEIC  f2f2d73d-a788-4328-bec6-09f4f88276e4.HEIC
CaseStudyCreator/: pyproject.toml
CaseStudyCreator/src/: crew.py  main.py
CaseStudyCreator/src/config/: agents.yaml  tasks.yaml
CaseStudyCreator/src/tools/: AddVideoToVectorDBTool.py  QueryVectorDBTool.py  ResettingTool.py  chroma_db_init.py
CaseStudyCreator/src/utils/: pre-process-docs.py
Cofounder/crewai/: Replay.py  crew_youtube_simple.py  main_youtube_simple.py  sqlite_setup.py
Cofounder/crewai/config/: agents.yaml  tasks_youtube_simple.yaml
Cofounder/crewai/tools/: AddVideoToVectorDBTool.py  FetchRelevantVideosFromYouTubeChannelTool.py  PromptingRagTool.py  QueryVectorDBTool.py  ResettingTool.py  chroma_db_init.py
ContractReview/: .gitignore  Claim.md  Claim_decision.md  Claim_reviewed.md  README.md  pyproject.toml
ContractReview/src/policy recommendation/: Claim.md  Claim_decision.md  Claim_reviewed.md  QuoteManagement.py  replay.py  streamlit.py
ContractReview/src/policy recommendation/tools/: __init__.py  calculationTool.py  claimTool.py  insuranceTool.py  multiplicationTool.py
ContractReview/src/policy recommendation/utils/: conversion_results.txt
ContractReview/src/policy recommendation/utils/insurance_index/: default__vector_store.json  docstore.json  index_store.json
ContractReview/src/policy recommendation/utils/policy_index/: default__vector_store.json  docstore.json  index_store.json
EmailDigest/crewai/tools/: AddVideoToVectorDBTool.py  FetchRelevantVideosFromYouTubeChannelTool.py  Scheduling.py  messages.md  sqlite.db  tutorial.py
GeminiTutorial/tools/: computerVision.py  contractAnalysis.py  geminiIndexTool.py  geminiQueryProcessor.py  geminiQueryTool.py  geminiTool.py
MCP/: crawl4ai.py
QuoteAutomation/: EmailDraft.md  OrderableItems.md  Quote.md  SalesOrder.md  activate_env.sh  pyproject.toml  setup.py
QuoteAutomation/sources/: ClothingInventory.csv
QuoteAutomation/src/recommendationenginetest/: Demo.py  ReceiveEmail.py  agent.py  crew.py  replay.py  report_INVESTMENT_THESES.md
QuoteAutomation/src/recommendationenginetest/tools/: pineconeTool.py
QuoteAutomation/src/recommendationenginetest/utils/: cleaning.py  index.py  query.py  upsert.py
RecommendationEngine/: .gitignore  README.md  pyproject.toml
RecommendationEngine/sources/: agents_data.xlsx
RecommendationEngine/src/: crew.py  main.py
RecommendationEngine/src/config/: agents.yaml  tasks.yaml
RecommendationEngine/src/tools/: weaviate_vector_search_tool.py
RecommendationEngine/src/utils/: pre-process-docs.py
RecommendationEngineTest/: README.md  pyproject.toml  report.md  report_INVESTMENT_THESES.md  report_MARKET_ANALYSIS.md  run_streamlit.sh  setup_env.sh
RecommendationEngineTest/sources/: agents_data.csv
RecommendationEngineTest/src/recommendationenginetest/: crew.py  main.py  report_INVESTMENT_THESES.md  report_MARKET_ANALYSIS.md  streamlit.py
RecommendationEngineTest/src/recommendationenginetest/config/: agents.yaml  tasks.yaml
RecommendationEngineTest/src/recommendationenginetest/myenv/: pyvenv.cfg
RecommendationEngineTest/src/recommendationenginetest/tools/: pineconeTool.py  weaviate_vector_search_tool.py
RecommendationEngineTest/src/recommendationenginetest/utils/: index.py  pre-process-docs.py  query.py  upsert.py
RecruiterAI/: mp3split.py  tutorial.py
VoiceAgent/demo/: Active Family Holidays.md  Book Your Family Adventure.md  Discover Sicily_ Where Family Adventures Begin.md  Discover Sicily_s All-Inclusive Family Sports Para.md  Discover Sicily_s Ultimate Family Sports Paradise.md  Discover the Splendor of Sicily.md  Elevate Your Career with AI Skills.md  Enchanted Sicily_ Your Love Awaits.md  Escape to Nature_ Your Romantic Getaway in Sicily.md  Experience Tennis Like Never Before in Sicily.md  Join Dante_s Dental Conference in Sicily_.md  Rediscover Joy on the Court in the Majestic Mounta.md  Sicily Awaits_ Your All-Inclusive Retreat.md  Sicily_ Serve Up Fun_.md  Summer of Love.md  Tennis in Paradise_ Experience Sicily.md  Unlock Your AI Potential.md  Unlock Your Future with AI Mastery.md  Unwind in Sicily_s Luxury.md  demo_pkg_agents.py  main.py  my_workflow.py  tools.py
YouTubeSummarizer/: README.md  YouTubeSummarizer.py
YouTubeSummarizer/db/: chroma.sqlite3
db/: chroma.sqlite3
quickstarts/: Video.ipynb
