[project]
name = "recommendationenginetest"
version = "0.1.0"
description = "RecommendationEngine using crewAI"
authors = [{ name = "Vladimir", email = "vladimir@elementsagents.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai-tools>=0.32.1",
    "crewai[tools]>=0.86.0,<1.0.0",
    "docling>=2.15.1",
    "weaviate-client>=4.10.4",
]

[project.scripts]
recommendationenginetest = "recommendationenginetest.main:run"
run_crew = "recommendationenginetest.main:run"
train = "recommendationenginetest.main:train"
replay = "recommendationenginetest.main:replay"
test = "recommendationenginetest.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/recommendationenginetest"]