[tool.poetry]
name = "recommendationenginetest"
version = "0.1.0"
description = "RecommendationEngine using crewAI"
authors = ["Vladimir <vladimir@elementsagents.com>"]
readme = "README.md"
packages = [{include = "recommendationenginetest", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<=3.12"
crewai-tools = ">=0.32.1"
crewai = {version = ">=0.86.0,<1.0.0", extras = ["tools"]}
pinecone-client = "==2.2.4"
python-dotenv = ">=1.0.0"
pandas = ">=2.0.0"
composio-crewai = "*"
langchain-openai = "*"
sentence-transformers = "*"

[tool.poetry.scripts]
recommendationenginetest = "recommendationenginetest.main:run"
run_crew = "recommendationenginetest.main:run"
train = "recommendationenginetest.main:train"
replay = "recommendationenginetest.main:replay"
test = "recommendationenginetest.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"